@@ -1,3 +1,8 @@
+2012-05-16  Borut Razem  <borutr@users.sourceforge.net>
+  * gpasm/Makefile.am, gplink/Makefile.am, gputils/Makefile.am:
+    fixed bug #3517180 - Out-of-source-tree builds fail,
+    thanx to Raphael Neider for the patfch
+
 2012-05-15  Marko Kohtala  <marko.kohtala@gmail.com>
   * libgputils/gpcofflink.c (gp_cofflink_patch_addr): Bug #3526882 fix
   relocation of RELOCT_BRA for pic14e.
